--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ License: Creative Commons Attribution
 							</p>
 				    </li>
 				<li><b>演講資訊: </b> <p align="center">
-							<img class="header-image" src="images/keynote.jpg" height="400" width="850"/>
+							<img class="header-image" src="images/Keynote.jpg" height="400" width="850"/>
 							</p>
 				<li><b>給優勝者們的一封信: </b> <br><br>
 							<blockquote style="color:#000000;
